Finished implementing BigDecimal - Passes 75 of 75 tests